k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oficina
  labels:
    app.kubernetes.io/part-of: oficina-fase3
