k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-api
  namespace: oficina
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: oficina-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
  externalTrafficPolicy: Cluster
